# SAM-SEM-Segmentation

./: .gitignore  INTERACTIVE_FEATURES_VERIFICATION.md  README.md  REFACTORING_SUMMARY.md  SEM Image Analysis.ipynb  analyze_results.ipynb  download_sam_weights.py  requirements.txt  run_app.bat  test_batch_analysis.ipynb  test_interactive_analysis.ipynb
cnt_analysis_app/: PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USER_GUIDE.md  app.py  app_v2.py  launch.bat  launch.sh  requirements.txt  visualization.py
sem_analysis_app/: PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USER_GUIDE.md  launch.bat  launch.sh  sem_analysis_app.py  visualization.py
sem_particle_analysis/: .gitignore  INSTALL.md  README.md  pyproject.toml  requirements.txt  setup.py
sem_particle_analysis/examples/: process_images.py  simple_example.py
sem_particle_analysis/sem_particle_analysis/: __init__.py  analysis.py  data_manager.py  interactive.py  model.py  scale_detection.py  segmentation.py  utils.py
